db/5 - Mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-me
  namespace: db
  labels:
    app: mongo-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      affinity:
          nodeAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                - key: for
                  operator: In
                  values:
                  - storage      
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0-alpha.4
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 0.02
            memory: 32Mi
          limits:
            cpu: 0.150
            memory: 256Mi
        volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
      volumes:
        - name: secret-volume
          secret:
            secretName: db-secret
---

apiVersion: v1
kind: Service
metadata:
  name: me-svc
  namespace: db
  labels:
    app: mongo-express-svc
spec:
  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
  - port: 8081
    nodePort: 30001
