db/6 - Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-system-ingress
  namespace: db
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/adm"
        backend:
          service:
            name: mongo-express-svc
            port:
              number: 8081
